<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSignUp">

    <!-- TODO: Update blank fragment layout -->
    <!-- TODO: Update blank fragment layout -->
    <TableLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:stretchColumns="1"
        android:layout_height="match_parent">

        <TableRow>

            <ImageView
                android:layout_height="wrap_content"
              android:layout_margin="10dp"
                android:background="@android:color/holo_orange_dark"
                android:src="@drawable/ic_action_edit" />
            <EditText
                android:id="@+id/editText_signUp_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterFullName"
                android:layout_margin="10dp"
                android:inputType="text" />
        </TableRow>

        <TableRow>
            <ImageView
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/holo_orange_dark"
                android:src="@drawable/ic_action_edit" />
            <EditText
                android:id="@+id/editText_signUp_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterUserName"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="text" />
        </TableRow>
<TableRow
    android:layout_height="10dp"
    android:gravity="center"
    >
    <TextView
        android:gravity="center"
        android:layout_span="2"
        android:id="@+id/editText_signUp_userNameErrorMsg"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:text=""
        />

</TableRow>
        <TableRow>

            <ImageView
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/holo_orange_dark"
               android:src="@drawable/ic_action_edit" />
            <EditText
                android:id="@+id/editText_signUp_enterApartmentNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterApartmentnumber"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/holo_orange_dark"
                android:src="@drawable/ic_action_email" />
            <EditText
                android:id="@+id/editText_signUp_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterEmail"
                android:layout_margin="10dp"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_margin="10dp"
                android:background="@android:color/holo_orange_dark"
                android:src="@drawable/ic_action_password" />
            <EditText
                android:layout_margin="10dp"
                android:hint="@string/enterPassword"
                android:id="@+id/editText_signUp_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_span="2"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"
                android:id="@+id/btn_signUp_singUp"
                android:background="@drawable/button_active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign-Up" />

        </TableRow>

    </TableLayout>


</FrameLayout>