<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogIn">

    <!-- TODO: Update blank fragment layout -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:backgroundTint="@color/textColor"
        android:stretchColumns="1">

        <TableRow>

            <ImageView
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/holo_orange_dark"
                android:src="@drawable/ic_action_email" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/textColor"
                android:hint="@string/enterEmail"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow>

            <ImageView
                android:layout_margin="10dp"
                android:background="@android:color/holo_orange_dark"
                android:src="@drawable/ic_action_password" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/textColor"
                android:ems="10"
                android:hint="@string/enterPassword"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn_LogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_span="2"
                android:enabled="false"
                android:alpha="100"
                android:background="@drawable/button_active"
                android:text="Log-In"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

        </TableRow>


        <TableRow android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn_forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_span="2"
                android:alpha="255"
                android:background="@null"
                android:enabled="true"
                android:text="@string/forgotPassword"
                android:textColor="@color/textColor">
            </Button>
        </TableRow>
    </TableLayout>


</FrameLayout>