<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProduct"
    android:stretchColumns="1">

    <!-- Title -->
    <TableRow>

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:background="@android:color/holo_orange_dark"
            app:srcCompat="@drawable/product_title" />

        <EditText
            android:id="@+id/product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/enterProductTitle"
            android:inputType="text" />
    </TableRow>

    <!-- Location -->
    <TableRow>
        <ImageView
            android:layout_margin="10dp"
            android:background="@android:color/holo_orange_dark"
            app:srcCompat="@drawable/product_price" />

        <EditText
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/enterProductPrice"
            android:inputType="text" />
    </TableRow>

    <TableRow>
        <ImageView
            android:layout_margin="10dp"
            android:background="@android:color/holo_orange_dark"
            app:srcCompat="@drawable/product_categories" />

        <MultiAutoCompleteTextView
            android:id="@+id/product_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/enterProductCategories"
            android:inputType="text" />
    </TableRow>


    <!-- Picture -->
    <RelativeLayout>


        <Button
            android:id="@+id/product_Img_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/button_active"
            android:text="Choose Image"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/product_Img"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_toRightOf="@id/product_Img_btn"
            android:layout_margin="10dp"
            android:textSize="15dp"
            />

    </RelativeLayout>

    <!--Description -->

    <TableRow>
        <ImageView
            android:layout_margin="10dp"
            android:background="@android:color/holo_orange_dark"
            app:srcCompat="@drawable/product_desc" />
        <TextView
            android:text="Description:"
            android:layout_gravity="left|center"
            android:textSize="15dp"
            android:layout_margin="10dp"/>
    </TableRow>

    <TableRow>
        <EditText
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_span="2"
            android:inputType="textMultiLine" />

    </TableRow>

    <!-- create button -->
    <TableRow android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/createProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_span="2"
            android:background="@drawable/button_active"
            android:text="Add Product"
            android:textColor="@android:color/white" />

    </TableRow>
    <TableRow>
        <Space android:layout_span="2"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
    </TableRow>

</TableLayout>